# CarDealer

./: CMakeLists.txt  customersframe.cpp  customersframe.h  customersframe.ui  editcustomerdialog.cpp  editsellerdialog.cpp  editsellerdialog.h  editvehicledialog.cpp  editvehicledialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  newcustomerdialog.h  newcustomerdialog.ui  newsaledialog.cpp  newsaledialog.h  newsaledialog.ui  newsellerdialog.ui  newvehicledialog.h  newvehicledialog.ui  newvehicleframe.cpp  newvehicleframe.h  newvehicleframe.ui  reportcustomerbyyeardialog.ui  reportsellerpermonthdialog.cpp  reportsellerpermonthdialog.ui  reportsellerperyeardialog.h  resources.qrc  salesframe.cpp  salesframe.h  salesframe.ui  sellerframe.cpp  sellerframe.h  sellerframe.ui  settingsframe.cpp  vehiclesframe.cpp  vehiclesframe.h  vehiclesframe.ui  vehiclevalidator.cpp  vehiclevalidator.h  (+5 more)
customers/: customer.cpp  customer.h  customersframe.cpp  customersframe.h  customervalidator.cpp  customervalidator.h  editcustomerdialog.cpp  editcustomerdialog.h  editcustomerdialog.ui  newcustomerdialog.cpp  viewcustomerdialog.cpp  viewcustomerdialog.h  viewcustomerdialog.ui
delegates/: booleandelegate.cpp  booleandelegate.h  currencydelegate.cpp  currencydelegate.h
partexchange/: partexchange.cpp  partexchange.h  partexchangeframe.cpp  partexchangeframe.h  partexchangeframe.ui
reports/: reportcardealerbymonthdialog.cpp  reportcardealerbymonthdialog.h  reportcardealerbymonthdialog.ui  reportcardealerperyeardialog.cpp  reportcardealerperyeardialog.h  reportcardealerperyeardialog.ui  reportcustomerbyyeardialog.cpp  reportcustomerbyyeardialog.h  reportcustomerbyyeardialog.ui  reportsellerpermonthdialog.cpp  reportsellerpermonthdialog.h  reportsellerpermonthdialog.ui  reportsellerperyeardialog.cpp  reportsellerperyeardialog.ui
sales/: newsaledialog.cpp  newsaledialog.ui  salesframe.cpp  salesframe.h  salesframe.ui  salesmodel.cpp  salesmodel.h  viewsalesdialog.cpp  viewsalesdialog.h  viewsalesdialog.ui
sellers/: editsellerdialog.cpp  editsellerdialog.h  editsellerdialog.ui  newsellerdialog.cpp  newsellerdialog.h  seller.cpp  seller.h  sellerframe.cpp  sellerframe.ui  sellervalidator.cpp  sellervalidator.h
settings/: settings.cpp  settings.h  settingsframe.cpp  settingsframe.h  settingsframe.ui  settingsvalidator.cpp  settingsvalidator.h
sql/: database.sql
vehicles/: editvehicledialog.cpp  editvehicledialog.ui  newvehicledialog.cpp  newvehicledialog.h  newvehicledialog.ui  vehicle.cpp  vehicle.h  vehiclesframe.cpp  vehiclesframe.h  vehiclesframe.ui  vehiclevalidator.cpp  vehiclevalidator.h  viewvehicledialog.cpp
